@@ -27,7 +27,6 @@
 #define __GNOME_FILECONVERT_H__ 1
 
 #include <glib.h>
-#include <libgnomebase/gnome-defs.h>
 
 /* WARNING ____ IMMATURE API ____ liable to change */
 
