@@ -27,7 +27,6 @@
 #define __GNOME_TRIGGERS_H__
 
 #include <glib.h>
-#include <libgnomebase/gnome-defs.h>
 
 G_BEGIN_DECLS
 
