@@ -25,7 +25,6 @@
 #define GNOME_URL_H
 
 #include <glib.h>
-#include <libgnomebase/gnome-defs.h>
 
 G_BEGIN_DECLS
 
