@@ -50,7 +50,6 @@
 #include <pwd.h>
 #include <limits.h>
 #include "libgnomeP.h"
-#include <libgnomebase/gnome-defs.h>
 #include <libgnomebase/gnome-program.h>
 #include <libgnomebase/gnome-portability.h>
 #include <libgnome/gnome-util.h>
